--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RickAndMorty"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-        </activity>
-
         <activity android:name=".characters.CharacterListActivity"
             android:exported="true">
             <intent-filter>
@@ -27,6 +22,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".CharacterDetailActivity"
+            android:exported="true">
         </activity>
     </application>
 
