--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RickAndMorty"
         tools:targetApi="31">
-        <activity android:name=".characters.CharacterListActivity"
+        <activity
+            android:name=".NavGraphActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,9 +25,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".characters.CharacterListActivity"
+            android:exported="true" />
+        <activity
             android:name=".CharacterDetailActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
